# framework

./: .gitignore  CMakeLists.txt  Makefile
src/: CMakeLists.txt  console.hpp  main.cpp  math.hpp  meta.hpp  module.hpp  modules.cpp  modules.hpp  physics.hpp
src/console/: CMakeLists.txt  asciiart.cpp  asciiart.hpp  chars.cpp  chars.hpp  console.cpp  console.hpp  manip.cpp  manip.hpp  menu.cpp  menu.hpp  posstream.hpp  style.cpp  style.hpp
src/demineur/: CMakeLists.txt  module.cpp  terrain.hpp
src/math/: CMakeLists.txt  constantes.hpp  coord.hpp  forme.hpp  infini.cpp  infini.hpp  matrice.hpp  meta.hpp  nombre.hpp  operations.hpp  polynome.hpp  random.hpp  range.hpp
src/meta/: algo.hpp  comparaison.hpp  for_each.hpp  get.hpp  int.hpp  liste.hpp  operateur.hpp  operations.hpp
src/othello/: CMakeLists.txt  module.cpp  othellier.cpp  othellier.hpp  pion.cpp  pion.hpp
src/physics/: meta.hpp
src/plateau/: 2d.hpp  case.hpp
