add_executable(run
	main.cpp

	# Console
	console/console.cpp
	console/console.hpp
	console/manip.cpp
	console/manip.hpp
	console/posstream.hpp
	console/style.cpp
	console/style.hpp

	# Math
	math/coord.hpp
	math/infini.cpp
	math/infini.hpp
	math/matrice.hpp
	math/nombre.hpp
	math/operations.hpp
	math/polynome.hpp
	math/range.hpp
)
